--- a/src/app/catalog/list/modals/reactivate-modal/reactivate-modal.component.scss
+++ b/src/app/catalog/list/modals/reactivate-modal/reactivate-modal.component.scss
@@ -7,7 +7,7 @@
 
 .content-col {
   text-align: center;
-  padding: 52px 25px;
+  padding: $spacing-40 25px;
 }
 
 tsl-button {
