--- a/src/app/catalog/list/modals/upload-confirmation-modal/upload-confirmation-modal.component.scss
+++ b/src/app/catalog/list/modals/upload-confirmation-modal/upload-confirmation-modal.component.scss
@@ -5,7 +5,7 @@ $border-radius: 0.3rem;
 .content-col {
   background: url(/assets/images/urgent-background.svg) no-repeat 90px 47px;
   background-size: 130px;
-  padding: $spacing-40 $spacing-40 $spacing-M 260px;
+  padding: $spacing-L $spacing-40 $spacing-M 260px;
   margin-bottom: $spacing;
   p {
     margin: 0 auto $spacing-3M auto;
